--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,20 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --bg-color: #2e1a47;
+  --main-color: #f7f2ea;
+  --caret-color: #f7f2ea;
+  --sub-color: #c18fff;
+  --sub-alt-color: #27173c;
+  --text-color: #f7f2ea;
+  --error-color: #f04e98;
+  --error-extra-color: #bd1c66;
+  --colorful-error-color: #f04e98;
+  --colorful-error-extra-color: #bd1c66;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--main-color);
+  background: var(--bg-color);
   font-family: Arial, Helvetica, sans-serif;
 }
 
